# phantom-cap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.indexer  LICENSE  README.md  diesel.toml  docker-compose.yaml
crates/backend/: Cargo.toml
crates/backend/src/: format.rs  handlers.rs  main.rs  models.rs  query.rs  templates.rs
crates/backend/static/styles/: input.css  output.css
crates/backend/templates/: base.html  cap_transfers.html  cap_versions.html  index.html  macros.html  package.html  search.html  upgrade_cap.html
crates/frontend/: Cargo.toml  index.html  package-lock.json  package.json
crates/frontend/src/: main.rs
crates/frontend/src/components/: footer.rs  header.rs
crates/frontend/src/pages/: home.rs  mod.rs  not_found.rs  upgrade_cap.rs
crates/frontend/src/router/: route.rs
crates/indexer/: Cargo.toml
crates/indexer/migrations/2025-12-13-122659-0000_upgrade_caps/: up.sql
crates/indexer/src/: main.rs  models.rs  schema.rs
crates/indexer/src/handlers/: created.rs  mod.rs  transfer.rs  upgrade.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: main.rs
migrations/2025-12-09-120720-0000_transaction_digests/: down.sql
migrations/2025-12-13-122659-0000_upgrade_caps/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs  upgrade_cap_handler.rs  upgrade_cap_transfer_handler.rs
src/handlers/: created.rs  mod.rs  transfer.rs  upgrade.rs
