[workspace.package]
version = "0.1.0"
edition = "2024"
exclude = [".github/"]

[workspace]
resolver = "3"
members = ["crates/backend","crates/indexer"]

[workspace.dependencies]
# Sui dependencies
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.62.1" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.62.1" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Diesel PostgreSQL
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.2"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.0"

# Use .env file
dotenvy = "0.15"

# Command line parsing
clap = { version = "4.5.53", features = ["derive"] }

chrono = "0.4.42"
futures-util = { version = "0.3", features = ["std"] }

# Actix Web
actix-web = "4.12.1"
actix-files = "0.6.9"

# Template engine
askama = "0.15.0"

serde = { version = "1", features = ["derive"] }

# Logging
env_logger = "0.8"
log = "0.4"