[package]
name = "backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-web.workspace = true
askama.workspace = true
serde.workspace = true

# Diesel PostgreSQL
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
chrono.workspace = true
futures-util.workspace = true
anyhow.workspace = true

sui-types.workspace = true
actix-files.workspace = true
url.workspace = true
dotenvy.workspace = true

env_logger.workspace = true
log.workspace = true