[package]
name = "indexer"
version.workspace = true
edition.workspace = true

[dependencies]
sui-indexer-alt-framework.workspace = true
sui-types.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Diesel PostgreSQL
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true

# Async traits
async-trait.workspace = true

# URL parsing
url.workspace = true

# Use .env file
dotenvy.workspace = true

# Command line parsing
clap.workspace = true
chrono.workspace = true
futures-util.workspace = true

# Logging
env_logger.workspace = true
log.workspace = true